# chibby

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.chibby/: environments.toml  pipeline.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: DESIGN_SYSTEM.md
docs/LOGS/: session-last.txt  tests-runner-results.txt
docs/audits/: phase-0-audit.md
docs/community/: CHANGELOG.md  CONTRIBUTING.md
docs/features/: cli-commands.md  cli.md  env-secrets.md  security-gates.md  (+1 more)
frontend/: App.tsx  test-setup.ts
scripts/: update-homebrew.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_checks/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: context.rs  executor.rs  mod.rs  pipeline_gen.rs  skills.rs
src-tauri/src/agent-identities/_shared/: cicd-knowledge.md  memory-instruction.md  output-format.md  security.md
src-tauri/src/agent-identities/chibby/: bootstrap.md  identity.md  tools.md
src-tauri/src/ai/: identity_loader.rs  memory.rs  mod.rs  prompts.rs  provider.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/commands/: agent_commands.rs  artifact_commands.rs  env_commands.rs  gate_commands.rs  mod.rs  notify_commands.rs  pipeline_commands.rs  project_commands.rs  run_commands.rs  settings_commands.rs  template_commands.rs  updater_commands.rs  version_commands.rs
src-tauri/src/engine/: app_settings.rs  artifacts.rs  audit.rs  bootstrap.rs  cleanup.rs  detector.rs  executor.rs  gates.rs  leak_scanner.rs  mod.rs  models.rs  notify.rs  persistence.rs  pipeline.rs  preflight.rs  recommendations.rs  run_support.rs  secret_audit.rs  secrets.rs  signing.rs  templates.rs  updater.rs  version.rs
src-tauri/src/engine/detector/: deploy_gen.rs  deployment.rs  draft.rs  folders.rs  scripts.rs  validation.rs  workflows.rs
src-tauri/src/engine/gates/: commit_lint.rs  common.rs  container.rs  dependency.rs  iac.rs  license.rs  sast.rs  secret.rs
src-tauri/src/engine/importers/: dotenv.rs  flyio.rs  mod.rs  railway.rs  vercel.rs
src-tauri/src/engine/models/: artifacts.rs  cleanup.rs  environment.rs  gates.rs  notify.rs  pipeline.rs  project.rs  recommendations.rs  run.rs  signing.rs  template.rs  updater.rs  validation.rs  version.rs
src-tauri/templates/pipelines/: docker-compose-deploy.toml  fullstack-docker.toml  go-web-service.toml  node-webapp.toml  python-django.toml  python-fastapi.toml  rust-cli.toml  rust-library.toml  static-site.toml  tauri-desktop.toml
src-tauri/templates/stages/: akamai-edgeworkers-deploy.toml  akamai-linode-deploy.toml  aws-ec2-ssh-deploy.toml  aws-ecs-deploy.toml  azure-webapp-deploy.toml  cargo-publish.toml  digitalocean-app-deploy.toml  digitalocean-droplet-deploy.toml  docker-build-push.toml  docker-compose-ssh.toml  flyio-deploy.toml  flyio-static-deploy.toml  gcp-cloudrun-deploy.toml  gcp-gce-ssh-deploy.toml  github-release.toml  hetzner-deploy.toml  homebrew-core-pr.toml  homebrew-formula.toml  homebrew-tap-publish.toml  npm-publish.toml  railway-deploy.toml  render-deploy.toml  render-git-deploy.toml  s3-deploy.toml  ssh-rsync-deploy.toml  tauri-bundle.toml  vercel-deploy.toml  version-bump-tag.toml
(+78 files in other folders)
