[package]
name = "chibby"
version = "0.2.2"
description = "Local-first open-source CI/CD for solo developers"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "chibby"

[lib]
name = "chibby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chibby-cli"
path = "src/bin/chibby.rs"
required-features = ["cli"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"
log = "0.4"
tauri = { version = "2.11", features = [], optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
sha2 = "0.11"
glob = "0.3"
reqwest = { version = "0.13", features = ["json"] }
regex = "1"
async-trait = "0.1"
tempfile = "3"
# CLI dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
owo-colors = { version = "4", features = ["supports-colors"], optional = true }
console = { version = "0.16", optional = true }
indicatif = { version = "0.18", optional = true }
rpassword = { version = "7", optional = true }

[dev-dependencies]

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-log", "tauri-plugin-dialog", "tauri-plugin-shell"]
cli = ["clap", "owo-colors", "console", "indicatif", "rpassword"]
